# tex-in-c

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile_old  README.md  TeX.sln  TeX.vcxproj  TeX.vcxproj.filters  align.c  align.h  align_8c.html  align_8c.js  align_8c__incl.map  align_8c__incl.md5  align_8h.html  align_8h.js  align_8h__dep__incl.map  align_8h__dep__incl.md5  align_8h__incl.map  align_8h__incl.md5  align_8h_source.html  annotated.html  annotated_dup.js  box.c  box.h  box_8c.html  box_8c.js  box_8c__incl.map  box_8c__incl.md5  box_8h.html  box_8h.js  box_8h__dep__incl.map  box_8h__dep__incl.md5  box_8h__incl.map  box_8h__incl.md5  box_8h_source.html  box__copy_8c.html  box__copy_8c.js  (+864 more)
.github/workflows/: c-cpp.yml  c.yml  main.yml
docs/: Doxyfile
pl/: mk_pool.pl  str2num.pl
ppc/: Makefile_gen_from_ppc
search/: all_0.html  all_0.js  all_1.html  all_1.js  all_10.html  all_10.js  all_11.html  all_11.js  all_12.html  all_12.js  all_13.html  all_13.js  all_14.html  all_14.js  all_15.html  all_15.js  all_16.html  all_16.js  all_17.html  all_17.js  all_18.html  all_18.js  all_19.html  all_19.js  all_1a.html  all_1a.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  (+312 more)
test/: .gitignore  E560.tex  S1020+1021.tex  bug-show.tex  primitive.txt  primitive_sorted.txt  stringlist.txt
test/basic-test/: helloworld.tex
test/errors/293-fatalerror/: 302.tex  509.tex  528.tex  654.tex  671.tex
